# fp_music_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  vcb_audio_source.rs
