[package]
name = "fp-music-bot"
version = "0.1.0"
authors = ["Floris PAJANY <floris.pajany@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
cpal = "0.11.0"
serenity = { default-features = false, version = "0.7", features = ["cache", "framework", "standard_framework", "rustls_backend", "voice"] }
byteorder = "1.0"